@@ -42,7 +42,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -124,7 +123,7 @@ public class ZkStateReader implements Closeable {
   private final ConcurrentHashMap<String, DocCollection> watchedCollectionStates = new ConcurrentHashMap<String, DocCollection>();
 
   /** Collections with format2 state.json, not "interesting" and not actively watched. */
-  private volatile Map<String, ClusterState.CollectionRef> lazyCollectionStates = new HashMap<>();
+  private final ConcurrentHashMap<String, LazyCollectionRef> lazyCollectionStates = new ConcurrentHashMap<String, LazyCollectionRef>();
 
   private volatile Set<String> liveNodes = emptySet();
 
@@ -286,7 +285,7 @@ public class ZkStateReader implements Closeable {
         DocCollection newState = fetchCollectionState(coll, null);
         updateWatchedCollection(coll, newState);
       }
-      refreshLazyFormat2Collections(true);
+      refreshCollectionList(null);
       refreshLiveNodes(null);
       constructState();
     }
@@ -338,7 +337,7 @@ public class ZkStateReader implements Closeable {
     // on reconnect of SolrZkClient force refresh and re-add watches.
     refreshLegacyClusterState(new LegacyClusterStateWatcher());
     refreshStateFormat2Collections();
-    refreshLazyFormat2Collections(true);
+    refreshCollectionList(new CollectionsChildWatcher());
     refreshLiveNodes(new LiveNodeWatcher());
 
     synchronized (ZkStateReader.this.getUpdateLock()) {
@@ -414,7 +413,7 @@ public class ZkStateReader implements Closeable {
     }
 
     // Finally, add any lazy collections that aren't already accounted for.
-    for (Map.Entry<String, ClusterState.CollectionRef> entry : lazyCollectionStates.entrySet()) {
+    for (Map.Entry<String, LazyCollectionRef> entry : lazyCollectionStates.entrySet()) {
       if (!result.containsKey(entry.getKey())) {
         result.put(entry.getKey(), entry.getValue());
       }
@@ -464,78 +463,69 @@ public class ZkStateReader implements Closeable {
 
   /**
    * Search for any lazy-loadable state format2 collections.
+   *
+   * A stateFormat=1 collection which is not interesting to us can also
+   * be put into the {@link #lazyCollectionStates} map here. But that is okay
+   * because {@link #constructState()} will give priority to collections in the
+   * shared collection state over this map.
+   * In fact this is a clever way to avoid doing a ZK exists check on
+   * the /collections/collection_name/state.json znode
+   * Such an exists check is done in {@link ClusterState#hasCollection(String)} and
+   * {@link ClusterState#getCollections()} method as a safeguard against exposing wrong collection names to the users
    */
-  private void refreshLazyFormat2Collections(boolean fullRefresh) throws KeeperException, InterruptedException {
+  private void refreshCollectionList(Watcher watcher) throws KeeperException, InterruptedException {
     List<String> children = null;
     try {
-      children = zkClient.getChildren(COLLECTIONS_ZKNODE, null, true);
+      children = zkClient.getChildren(COLLECTIONS_ZKNODE, watcher, true);
     } catch (KeeperException.NoNodeException e) {
       log.warn("Error fetching collection names");
       // fall through
     }
     if (children == null || children.isEmpty()) {
-      synchronized (getUpdateLock()) {
-        this.lazyCollectionStates = new HashMap<>();
-      }
+      lazyCollectionStates.clear();
       return;
     }
 
-    Map<String, ClusterState.CollectionRef> result = new HashMap<>();
-    for (String collName : children) {
-      if (interestingCollections.contains(collName)) {
-        // We will create an eager collection for any interesting collections.
-        continue;
-      }
+    // Don't mess with watchedCollections, they should self-manage.
 
-      if (!fullRefresh) {
-        // Try to use an already-created lazy collection if it's not a full refresh.
-        ClusterState.CollectionRef existing = lazyCollectionStates.get(collName);
-        if (existing != null) {
-          result.put(collName, existing);
-          continue;
+    // First, drop any children that disappeared.
+    this.lazyCollectionStates.keySet().retainAll(children);
+    for (String coll : children) {
+      // We will create an eager collection for any interesting collections, so don't add to lazy.
+      if (!interestingCollections.contains(coll)) {
+        // Double check contains just to avoid allocating an object.
+        LazyCollectionRef existing = lazyCollectionStates.get(coll);
+        if (existing == null) {
+          lazyCollectionStates.putIfAbsent(coll, new LazyCollectionRef(coll));
         }
       }
-
-      ClusterState.CollectionRef lazyCollectionState = tryMakeLazyCollectionStateFormat2(collName);
-      if (lazyCollectionState != null) {
-        result.put(collName, lazyCollectionState);
-      }
-    }
-
-    synchronized (getUpdateLock()) {
-      this.lazyCollectionStates = result;
     }
   }
 
-  private ClusterState.CollectionRef tryMakeLazyCollectionStateFormat2(final String collName) {
-    boolean exists = false;
-    try {
-      exists = zkClient.exists(getCollectionPath(collName), true);
-    } catch (Exception e) {
-      log.warn("Error reading collections nodes", e);
-    }
-    if (!exists) {
-      return null;
+  private class LazyCollectionRef extends ClusterState.CollectionRef {
+
+    private final String collName;
+
+    public LazyCollectionRef(String collName) {
+      super(null);
+      this.collName = collName;
     }
 
-    // if it is not collection, then just create a reference which can fetch
-    // the collection object just in time from ZK
-    return new ClusterState.CollectionRef(null) {
-      @Override
-      public DocCollection get() {
-        return getCollectionLive(ZkStateReader.this, collName);
-      }
+    @Override
+    public DocCollection get() {
+      // TODO: consider limited caching
+      return getCollectionLive(ZkStateReader.this, collName);
+    }
 
-      @Override
-      public boolean isLazilyLoaded() {
-        return true;
-      }
+    @Override
+    public boolean isLazilyLoaded() {
+      return true;
+    }
 
-      @Override
-      public String toString() {
-        return "lazy DocCollection(" + collName + ")";
-      }
-    };
+    @Override
+    public String toString() {
+      return "LazyCollectionRef(" + collName + ")";
+    }
   }
 
   /**
@@ -886,9 +876,6 @@ public class ZkStateReader implements Closeable {
     public void refreshAndWatch() {
       try {
         refreshLegacyClusterState(this);
-        // Changes to clusterstate.json signal global state changes.
-        // TODO: get rid of clusterstate.json as a signaling mechanism.
-        refreshLazyFormat2Collections(false);
       } catch (KeeperException.NoNodeException e) {
         throw new SolrException(ErrorCode.SERVICE_UNAVAILABLE,
                 "Cannot connect to cluster at " + zkClient.getZkServerAddress() + ": cluster not found/not ready");
@@ -901,6 +888,44 @@ public class ZkStateReader implements Closeable {
         log.error("", e);
         throw new ZooKeeperException(SolrException.ErrorCode.SERVER_ERROR,
                 "", e);
+      } catch (InterruptedException e) {
+        // Restore the interrupted status
+        Thread.currentThread().interrupt();
+        log.warn("", e);
+      }
+    }
+  }
+
+  /** Watches /collections children . */
+  class CollectionsChildWatcher implements Watcher {
+
+    @Override
+    public void process(WatchedEvent event) {
+      // session events are not change events,
+      // and do not remove the watcher
+      if (EventType.None.equals(event.getType())) {
+        return;
+      }
+      log.info("A collections change: {}, has occurred - updating...", (event));
+      refreshAndWatch();
+      synchronized (getUpdateLock()) {
+        constructState();
+      }
+    }
+
+    /** Must hold {@link #getUpdateLock()} before calling this method. */
+    public void refreshAndWatch() {
+      try {
+        refreshCollectionList(this);
+      } catch (KeeperException e) {
+        if (e.code() == KeeperException.Code.SESSIONEXPIRED
+            || e.code() == KeeperException.Code.CONNECTIONLOSS) {
+          log.warn("ZooKeeper watch triggered, but Solr cannot talk to ZK");
+          return;
+        }
+        log.error("", e);
+        throw new ZooKeeperException(SolrException.ErrorCode.SERVER_ERROR,
+            "", e);
       } catch (InterruptedException e) {
         // Restore the interrupted status
         Thread.currentThread().interrupt();
@@ -923,7 +948,6 @@ public class ZkStateReader implements Closeable {
       refreshAndWatch();
     }
 
-    /** Must hold {@link #getUpdateLock()} before calling this method. */
     public void refreshAndWatch() {
       try {
         refreshLiveNodes(this);
@@ -1028,13 +1052,8 @@ public class ZkStateReader implements Closeable {
     log.info("Removing watch for uninteresting collection {}", coll);
     interestingCollections.remove(coll);
     watchedCollectionStates.remove(coll);
-    ClusterState.CollectionRef lazyCollectionStateFormat2 = tryMakeLazyCollectionStateFormat2(coll);
+    lazyCollectionStates.put(coll, new LazyCollectionRef(coll));
     synchronized (getUpdateLock()) {
-      if (lazyCollectionStateFormat2 != null) {
-        this.lazyCollectionStates.put(coll, lazyCollectionStateFormat2);
-      } else {
-        this.lazyCollectionStates.remove(coll);
-      }
       constructState();
     }
   }
